// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component renders correctly no subtitle rendered if not provided in props 1`] = `
<div
  className="pageHeader"
>
  <h1>
    title
  </h1>
</div>
`;

exports[`Component renders correctly title and subtitle render correctly 1`] = `
<div
  className="pageHeader"
>
  <h1>
    title
  </h1>
  <h2>
    subtitle
  </h2>
</div>
`;
